--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "md5": "^2.3.0",
     "pinia": "^2.1.7",
+    "sass": "^1.70.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
